--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>dev.atellezfx.taller/dev.atellezfx.taller.HelloApplication</mainClass>
+                            <mainClass>dev.atellezfx.taller/dev.atellezfx.taller.EmpleadoApp</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
